--- a/assets/scss/layouts/_pages.scss
+++ b/assets/scss/layouts/_pages.scss
@@ -80,6 +80,9 @@ main {
 
   // Figures with a caption
   figure {
+    display: flex;
+    flex-direction: column;
+
     margin: 0 0 2rem;
     background-color: var(--beige);
 
@@ -98,330 +101,6 @@ main {
     }
     p {
       font-size: $font-size-sm;
-    }
-  }
-}
-
-// region Home page sections
-section.home.hero {
-  padding-top: Max(1rem, Min(6rem, 8vw));
-  padding-bottom: Max(1rem, Min(10rem, 12vw));
-  margin-left: auto;
-  margin-right: auto;
-
-  @media (max-width: $breakpoint-tablet) {
-    max-width: unset;
-    padding: $space-xl 0;
-    margin-left: var(--margin-page-h);
-    margin-right: var(--margin-page-h);
-    margin-bottom: $space-xl;
-  }
-}
-
-section.home,
-.page-content
-{
-  // Modern clearfix: prevent floats clearing box
-  display: flow-root;
-
-  // Desktop (wide) padding is dynamic based on page width
-  padding: var(--padding-page-content-v) var(--padding-page-content-h);
-
-  h1,
-  h2
-  {
-    margin-top: 0;
-  }
-  h1:last-child,
-  h2:last-child
-  {
-    margin-bottom: 0;
-  }
-
-  // On tablet width and below, reset padding to standard page margins
-  @media (max-width: $breakpoint-tablet) {
-    padding-left: var(--margin-page-h);
-    padding-right: var(--margin-page-h);
-  }
-}
-
-section.home.video {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-
-  h1 {
-    font-size: 2rem;
-    font-weight: var(--font-weight-reg);
-    color: var(--wine-red);
-  }
-
-  img {
-    object-fit: contain;
-    width: 100%;
-  }
-
-  .video-placeholder,
-  .video-embed
-  {
-    aspect-ratio: 16 / 9;
-    width: 100%;
-    border: 0;
-  }
-
-  @media (max-width: $breakpoint-phone) {
-    h1 {
-      font-size: 1.25rem;
-      line-height: 1.5rem;
-    }
-  }
-}
-
-section.home.hero {
-
-  .welcome {
-    display: grid;
-    grid-template-columns: auto 10% 25% auto 5% 10%;
-    grid-template-rows: 15% min-content min-content 5% 25% 20%;
-
-    // Hero section is slightly larger than the default grid
-    margin-left: -5vw;
-    margin-right: calc(-5vw - var(--margin-section-h));
-
-
-    h1 {
-      grid-column: 1 / 3;
-      grid-row: 1 / 4;
-      margin: 0 0 1rem 0;
-      z-index: 4;
-    }
-
-    p {
-      grid-column: 1 / 2;
-      grid-row: 4 / 6;
-      padding-right: 1rem;
-      z-index: 4;
-    }
-
-    .button-primary {
-      grid-column: 1 / 2;
-      grid-row: 6 / 7;
-      align-self: end;
-      justify-self: start;
-      z-index: 4;
-    }
-
-    .image1 {
-      background-image: url("../images/theme-image-1.jpg");
-      background-position: center;
-      background-size: cover;
-      grid-column: 2 / 5;
-      grid-row: 4 / 7;
-      z-index: 3;
-    }
-
-    .image2 {
-      background-image: url("../images/theme-image-2.jpg");
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      filter: blur(2px);
-      grid-column: 3 / 6;
-      grid-row: 2 / 5;
-      z-index: 2;
-    }
-
-    .image3 {
-      background-image: url("../images/theme-image-3.jpg");
-      filter: blur(4px);
-      background-position: center;
-      background-size: cover;
-      background-repeat: no-repeat;
-      grid-column: 4 / 7;
-      grid-row: 3 / 6;
-      z-index: 1;
-    }
-
-    @media (max-width: $breakpoint-tablet) {
-      grid-template-columns: auto 10% 5% 20%;
-      grid-template-rows: 20% auto 10% auto min-content;
-
-      margin-left: 0;
-      // This bit is to ensure the hero images touch the RHS of the viewport,
-      // but do not cause scrolling :|
-      margin-right: calc(-1 * var(--margin-page-h));
-
-      h1 {
-        grid-column: 1 / 4;
-        grid-row: 1 / 3;
-      }
-      p {
-        grid-column: 1 / 2;
-        grid-row: 3 / 5;
-      }
-      .button-primary {
-        grid-column: 1 / 2;
-        grid-row: 5 / 6;
-      }
-      .image1 {
-        grid-column: 3 / 6;
-        grid-row: 2 / 5;
-      }
-      .image2 {
-        grid-column: 2 / 6;
-        grid-row: 3 / 6;
-      }
-      .image3 {
-        grid-column: 4 / 5;
-        grid-row: 1 / 3;
-      }
-    }
-
-    // Hide images at phone size and reset to a simpler grid
-    @media (max-width: $breakpoint-phone) {
-      margin-right: 0;
-      p {
-        padding-right: unset;
-      }
-      grid-template-columns: 100%;
-      grid-template-rows: min-content min-content min-content;
-      .image1,
-      .image2,
-      .image3 {
-        display: none;
-      }
-    }
-  }
-}
-
-
-section.home.services {
-  padding: var(--margin-section-v) var(--margin-section-h);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-section.home.latest {
-  padding: var(--margin-section-v) var(--margin-section-h);
-  margin-bottom: Min(var(--margin-section-v), 5rem);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-
-  @media (max-width: $breakpoint-tablet) {
-    padding: $space-lg var(--margin-page-h);
-  }
-}
-
-// endregion
-
-// region About page sections
-section.people {
-  .person-list {
-    margin: 0 0 var(--margin-section-v) 0;
-    padding: 0;
-    @include auto-grid(16rem, 2rem, $max-cols: 2);
-    grid-row-gap: 6rem;
-  }
-  .person {
-    display: flex;
-    flex-direction: column;
-    .person-image {
-      width: 16.25rem;
-      height: 16.25rem;
-      border-radius: 50%;
-      margin-bottom: $space-xl;
-    }
-
-    .contact-card {
-      margin-top: auto;
-    }
-  }
-}
-
-// endregion
-
-// region Contact page
-.contact-info {
-  @include auto-grid(calc(33% - #{$space-xl}), 4rem);
-  margin-bottom: var(--margin-section-v);
-
-  .form {
-    // Hide labels
-    label {
-      @extend .sr-only;
-    }
-  }
-
-  .contact-list {
-    margin-bottom: 5rem;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: $space-xl;
-
-    font-family: var(--font-family-headings);
-    font-weight: var(--font-weight-bolder);
-
-    .contact-card {
-      display: grid;
-      grid-column-gap: $space-md;
-      grid-template-rows: min-content auto;
-      grid-template-columns: min-content auto;
-      grid-template-areas: "img name" "img email";
-
-      img.contact-image {
-        grid-area: img;
-        width: 3.75rem;
-        height: 3.75rem;
-        border-radius: 50%;
-      }
-      .contact-name {
-        grid-area: name;
-      }
-      .contact-email {
-        grid-area: email;
-        font-size: $font-size-sm;
-        font-weight: var(--font-weight-reg);
-      }
-    }
-  }
-}
-
-// endregion
-
-// region Services page
-
-.services.page-content {
-  .resource-cards {
-    margin-bottom: var(--margin-section-v);
-  }
-
-  @media (min-width: $breakpoint-phone) {
-    .resource-cards {
-      grid-template-rows: 1fr;
-      grid-template-columns: 1fr;
-
-      .resource-card {
-        grid-template-columns: 1fr 3fr;
-        grid-template-rows: 1fr;
-        img {
-          border-bottom-left-radius: var(--card-border-radius);
-          border-top-right-radius: 0;
-        }
-      }
-    }
-    .resource-info {
-      padding: $space-xl;
-
-      p {
-        // Undo the properties which limited this element
-        // to a fixed height on the main page
-        display: block;
-        -webkit-line-clamp: unset;
-        -webkit-box-orient: unset;
-        line-clamp: unset;
-      }
     }
   }
 }
